Fixed container centered align

--- a/lesson-09-practice/styles/style.css
+++ b/lesson-09-practice/styles/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-  min-width: 1150px;
+  max-width: 1150px;
   padding-inline: 20px;
   margin-inline: auto;
   padding-block: 100px;
